# influencio

./: CHANGELOG.md  LICENSE.md  README.md  pyproject.toml
.github/actions/: setup-poetry.yml
.github/workflows/: checks.yml  lint.yml
notebooks/: keyinfluencers.ipynb
src/influencio/: __init__.py  candidates.py  core.py  data_classes.py  enums.py  evaluator.py  explainer.py  imputers.py  keyinfluencers.py  model_evaluator.py  preprocessor.py  selector.py  tree.py  utils.py  validator.py  visualizations.py  visualizer.py
src/keyinfluencers/: keyinfluencers.py  tree.py  visualizations.py
tests/: conftest.py  test_core.py  test_tree.py
tests/influencio/: test_core.py  test_tree.py
