[project]
name = "keyinfluencers"
version = "0.1.0"
description = ""
authors = [
    {name = "davide-andreoli",email = "davide.andreoli@icloud.com"}
]
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
]

[tool.poetry]
packages = [{include = "keyinfluencers", from = "src"}]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
