[project]
name = "keyinfluencers"
version = "0.1.0"
description = ""
authors = [
    {name = "davide-andreoli",email = "davide.andreoli@icloud.com"}
]
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "scikit-learn (>=1.6.1,<2.0.0)",
    "matplotlib (>=3.10.1,<4.0.0)",
    "seaborn (>=0.13.2,<0.14.0)",
    "shap (>=0.47.2,<0.48.0)"
]

[tool.poetry]
packages = [{include = "keyinfluencers", from = "src"}]


[tool.poetry.group.dev.dependencies]
ipykernel = "^6.29.5"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
