[project]
name = "influencio"
version = "0.1.0"
description = ""
authors = [
    {name = "davide-andreoli",email = "davide.andreoli@icloud.com"}
]
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "scikit-learn (>=1.6.1,<2.0.0)",
    "matplotlib (>=3.10.1,<4.0.0)",
    "seaborn (>=0.13.2,<0.14.0)",
    "shap (>=0.47.2,<0.48.0)",
    "plotly (>=6.0.1,<7.0.0)",
    "nbformat (>=5.10.4,<6.0.0)"
]

[tool.poetry]
packages = [{include = "influencio", from = "src"}]


[tool.poetry.group.dev.dependencies]
ipykernel = "^6.29.5"
pre-commit = "^4.2.0"
pytest = "^8.3.5"
coverage = "^7.8.2"
ruff = "^0.11.13"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
